# cicd-streamlit

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  SECURITY-GUIDE.md  app.py  force_detection.py  pyproject.toml  release.txt  release2.txt  requirements.txt  test-code.py  test_vuln.js  vuln_streamlit_app.py  vulnerable-app.js  vulnerable_app.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI-pre-commit.yml  ci.yml  codeql.yml  codeql1.yml  dependency-review.yml  ghas-adoption-report.yml  pre-commit-adoption.yml  scorecard.yml  uat-check.yml
js/: app.js  bad_code.js  low_med.js  more_vulns.js  test.py
src/: __init__.py  bad_code.py  config.py  low_med.py  more_vulns.py  utils.py  validation.py
tests/: conftest.py  test_utils.py  test_validation.py
